--- a/src/TourComponent/style.css
+++ b/src/TourComponent/style.css
@@ -58,13 +58,30 @@
   border: none;
   color: #fff;
   cursor: pointer;
-  margin-left: 20px;
+  margin-left: 5px;
   opacity: 0.7;
   outline: 0;
   padding: 5px 8px;
   transition: opacity 0.2s;
 }
 .w-guide-tour-next:hover{
+  opacity: 1;
+}
+
+.w-guide-tour-skip{
+  background-color: transparent;
+  border-radius: 3px;
+  border: none;
+  color: #1a1a1a;
+  cursor: pointer;
+  font-style: italic;
+  margin-left: 20px;
+  opacity: 0.7;
+  outline: 0;
+  padding: 5px 8px;
+  transition: opacity 0.2s;
+}
+.w-guide-tour-skip:hover{
   opacity: 1;
 }
 
