--- a/src/ActionDrivenComponent/style.css
+++ b/src/ActionDrivenComponent/style.css
@@ -1,58 +1,120 @@
+/**
+ * CONTAINER
+ */
 .w-guide-text {
   color: #fff;
+  display: flex;
   height: max-content;
   max-width: 50vw;
   padding: 10px;
   position: absolute;
   width: max-content;
   z-index: 15;
-  display: flex;
+  cursor: initial;
 }
-.w-guide-text.left {
-  top: 0;
-  right: calc(100% + 10px);
-  flex-direction: row-reverse;
-}
-.w-guide-text.right {
-  top: 0;
-  left: calc(100% + 10px);
-}
-.w-guide-text.bottom {
-  top: calc(100% + 10px);
-}
-.w-guide-text.top {
-  bottom: calc(100% + 10px);
-}
+
+/* Control position */
+/** 
+ * IMAGE
+ */
 .w-guide-text img {
   display: block;
   width: auto;
-  height: 60px;
+  height: 40px;
   -webkit-filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(194deg)
     brightness(109%) contrast(101%); /* Safari 6.0 - 9.0 */
   filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(194deg)
     brightness(109%) contrast(101%);
 }
+/* Control position of img */
+.w-guide-text.right {
+  left: calc(100% + 10px) !important;
+  right: initial !important;
+  top: 0;
+}
 .w-guide-text.right img {
   transform: rotate(-19deg) translate(-13px, 3px);
 }
+
+.w-guide-text.left {
+  left: initial !important;
+  right: calc(100% + 10px) !important;
+  top: 0;
+  flex-direction: row-reverse;
+}
 .w-guide-text.left img {
-  transform: rotateX(211deg) translate(10px, 9px);
+  transform: rotateX(205deg) rotateZ(342deg) translate(10px, 15px);
+}
+
+.w-guide-text.top {
+  bottom: calc(100% + 10px) !important;
+  left: 50%;
+  transform: translateX(-50%);
+  top: initial !important;
+  flex-direction: column-reverse;
+  justify-content: center;
 }
 .w-guide-text.top img {
   transform: rotateX(178deg) translate(0, -7px);
 }
-.w-guide-text div {
+
+.w-guide-text.bottom {
+  bottom: initial !important;
+  left: 50%;
+  transform: translateX(-50%);
+  top: calc(100% + 10px) !important;
+  flex-direction: column;
+  justify-content: center;
+}
+.w-guide-text.bottom img {
+  transform: rotateX(30deg) translate(0, -13px);
+}
+
+.w-guide-text.bottom.right{
+  flex-direction: row;
+  transform: translateX(-60px);
+}
+.w-guide-text.bottom.right img{
+  transform: rotateX(30deg) translate(-10px, -9px);
+}
+
+.w-guide-text.top.right{
+  flex-direction: row;
+  transform: translateX(-60px);
+}
+.w-guide-text.top.right img{
+  align-self: flex-end;
+  transform: rotateX(178deg) translate(-10px, -10px);
+}
+
+.w-guide-text.top.left{
+  flex-direction: row-reverse;
+  transform: translateX(60px);
+}
+.w-guide-text.top.left img{
+  align-self: flex-end;
+  transform: rotateX(178deg) rotateY(180deg) translate(-2px, -10px);
+}
+
+.w-guide-text.bottom.left{
+  flex-direction: row-reverse;
+  transform: translateX(60px);
+}
+.w-guide-text.bottom.left img{
+  transform: rotateY(180deg) translate(10px, -10px);
+}
+
+/**
+ * CONTENT
+ */
+.w-guide-text .w-guide-container div {
   max-width: 300px;
   width: max-content;
   align-self: flex-end;
   pointer-events: none;
   user-select: none;
 }
-.w-guide-text.top div {
-  align-self: flex-start;
-}
-
-.w-guide-text button {
+.w-guide-text .w-guide-container button {
   background-color: transparent;
   border-radius: 3px;
   border: none;
@@ -66,7 +128,7 @@
   transition: opacity 0.2s;
   cursor: pointer;
 }
-.w-guide-text button:hover {
+.w-guide-text .w-guide-container button:hover {
   opacity: 1;
 }
 
