--- a/src/ActionDrivenComponent/style.css
+++ b/src/ActionDrivenComponent/style.css
@@ -70,37 +70,37 @@
   transform: rotateX(30deg) translate(0, -13px);
 }
 
-.w-guide-text.bottom.right{
+.w-guide-text.bottom.right {
   flex-direction: row;
   transform: translateX(-60px);
 }
-.w-guide-text.bottom.right img{
+.w-guide-text.bottom.right img {
   transform: rotateX(30deg) translate(-10px, -9px);
 }
 
-.w-guide-text.top.right{
+.w-guide-text.top.right {
   flex-direction: row;
   transform: translateX(-60px);
 }
-.w-guide-text.top.right img{
+.w-guide-text.top.right img {
   align-self: flex-end;
   transform: rotateX(178deg) translate(-10px, -10px);
 }
 
-.w-guide-text.top.left{
+.w-guide-text.top.left {
   flex-direction: row-reverse;
   transform: translateX(60px);
 }
-.w-guide-text.top.left img{
+.w-guide-text.top.left img {
   align-self: flex-end;
   transform: rotateX(178deg) rotateY(180deg) translate(-2px, -10px);
 }
 
-.w-guide-text.bottom.left{
+.w-guide-text.bottom.left {
   flex-direction: row-reverse;
   transform: translateX(60px);
 }
-.w-guide-text.bottom.left img{
+.w-guide-text.bottom.left img {
   transform: rotateY(180deg) translate(10px, -10px);
 }
 
@@ -114,7 +114,7 @@
   pointer-events: none;
   user-select: none;
 }
-.w-guide-text .w-guide-container button {
+.w-guide-text .w-guide-container .w-guide-skip {
   background-color: transparent;
   border-radius: 3px;
   border: none;
@@ -127,8 +127,10 @@
   padding: 5px 8px;
   transition: opacity 0.2s;
   cursor: pointer;
+  border: 1px solid #fff;
+  margin-top: 15px;
 }
-.w-guide-text .w-guide-container button:hover {
+.w-guide-text .w-guide-container .w-guide-skip:hover {
   opacity: 1;
 }
 
