--- a/src/ActionDrivenComponent/style.css
+++ b/src/ActionDrivenComponent/style.css
@@ -7,7 +7,7 @@
   height: max-content;
   max-width: 50vw;
   padding: 10px;
-  position: absolute;
+  position: fixed;
   width: max-content;
   z-index: 15;
   cursor: initial;
@@ -27,81 +27,93 @@
     brightness(109%) contrast(101%);
 }
 /* Control position of img */
-.w-guide-text.right {
-  left: calc(100% + 10px) !important;
-  right: initial !important;
-  top: 0;
+.w-guide-text.right{
+  align-items: center;
 }
 .w-guide-text.right img {
-  transform: rotate(-19deg) translate(-13px, 3px);
+  transform: scale(0.8) rotate(-33deg) translate(-13px, 3px);
 }
 
 .w-guide-text.left {
-  left: initial !important;
-  right: calc(100% + 10px) !important;
-  top: 0;
   flex-direction: row-reverse;
+  align-items: center;
 }
 .w-guide-text.left img {
-  transform: rotate(-72deg) translate(4px, 15px);
+  transform: scale(0.8) rotateX(205deg) rotateZ(342deg) translate(5px, 0);
+}
+.w-guide-text.left .w-guide-container{
+  text-align: right;
 }
 
 .w-guide-text.top {
-  bottom: calc(100% + 10px) !important;
-  left: 50%;
-  transform: translateX(-50%);
-  top: initial !important;
   flex-direction: column-reverse;
   justify-content: center;
 }
 .w-guide-text.top img {
-  transform: rotateX(178deg) translate(0, -7px);
+  transform: scale(0.8) rotateX(178deg) translate(0, -7px);
+}
+.w-guide-text.top .w-guide-container{
+  text-align: center;
 }
 
 .w-guide-text.bottom {
-  bottom: initial !important;
-  left: 50%;
-  transform: translateX(-50%);
-  top: calc(100% + 10px) !important;
   flex-direction: column;
   justify-content: center;
 }
 .w-guide-text.bottom img {
-  transform: rotateX(30deg) translate(0, -13px);
+  transform: rotateX(30deg) translate(0, -5px);
+}
+.w-guide-text.bottom .w-guide-container{
+  text-align: center;
 }
 
 .w-guide-text.bottom.right {
   flex-direction: row;
-  transform: translateX(-60px);
+  align-items: initial;
+  transform: translateX(-20px);
 }
 .w-guide-text.bottom.right img {
   transform: rotateX(30deg) translate(-10px, -9px);
 }
+.w-guide-text.bottom.right .w-guide-container{
+  text-align: left;
+}
 
 .w-guide-text.top.right {
   flex-direction: row;
-  transform: translateX(-60px);
+  transform: translateX(-20px);
 }
 .w-guide-text.top.right img {
   align-self: flex-end;
-  transform: rotateX(178deg) translate(-10px, -10px);
+  transform: rotateX(178deg) translate(-10px, -5px);
+}
+.w-guide-text.top.right .w-guide-container{
+  text-align: left;
 }
 
 .w-guide-text.top.left {
   flex-direction: row-reverse;
-  transform: translateX(60px);
+  transform: translateX(20px);
+  align-items: initial;
 }
 .w-guide-text.top.left img {
   align-self: flex-end;
-  transform: rotateX(178deg) rotateY(180deg) translate(-2px, -10px);
+  transform: rotateX(178deg) rotateY(180deg) translate(-2px, -5px);
+}
+.w-guide-text.top.left .w-guide-container{
+  text-align: right;
 }
 
 .w-guide-text.bottom.left {
   flex-direction: row-reverse;
-  transform: translateX(60px);
+  align-items: initial;
+  transform: translateX(20px);
 }
 .w-guide-text.bottom.left img {
-  transform: rotateY(180deg) translate(10px, -10px);
+  transform: rotateY(180deg) translate(-10px, 0);
+}
+.w-guide-text.bottom.left .w-guide-container{
+  text-align: right;
 }
 
 /**
