--- a/src/ActionDrivenComponent/style.css
+++ b/src/ActionDrivenComponent/style.css
@@ -3,14 +3,15 @@
  */
 .w-guide-text {
   color: #fff;
+  cursor: initial;
   display: flex;
   height: max-content;
   max-width: 50vw;
   padding: 10px;
   position: fixed;
+  visibility: hidden;
   width: max-content;
   z-index: 15;
-  cursor: initial;
 }
 
 /* Control position */
